--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ RABBITMQ_PORT=5672
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
-DB_PASS=1234
-DB_SCHEMA=ordersProducer
+DB_PASS=admnistrador
+DB_SCHEMA=reservationsProducer
