--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-RABBITMQ_USER=guest
-RABBITMQ_PASSWORD=guest
-RABBITMQ_HOST=23.21.140.225
+RABBITMQ_USER=Carlos1 
+RABBITMQ_PASSWORD=1234
+RABBITMQ_HOST=3.214.253.242 
 RABBITMQ_PORT=5672
 
 
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
-DB_PASS=admnistrador
+DB_PASS=administrador
 DB_SCHEMA=reservationsProducer
